After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 748799 - BSD: fix a couple if implicit declarations
BSD: fix a couple if implicit declarations
Status: RESOLVED FIXED
Product: vinagre
Classification: Applications
Component: general
git master
Other OpenBSD
: Normal normal
: ---
Assigned To: vinagre-maint
vinagre-maint
Depends on:
Blocks:
 
 
Reported: 2015-05-02 14:22 UTC by Antoine Jacoutot
Modified: 2015-05-03 06:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix a couple if implicit declarations (1.24 KB, patch)
2015-05-02 14:22 UTC, Antoine Jacoutot
accepted-commit_now Details | Review

Description Antoine Jacoutot 2015-05-02 14:22:58 UTC
Created attachment 302759 [details] [review]
fix a couple if implicit declarations

Hi.

This trivial patch fixes a couple of implicit declarations on BSD systems:

vinagre/pty_open.c:337: warning: implicit declaration of function 'putenv'
vinagre/pty_open.c:354: warning: implicit declaration of function 'login_tty'

_BSD_SOURCE needs to be defined to expose putenv() because we also define _XOPEN_SOURCE and _GNU_SOURCE.

util.h was not checked by configure so HAVE_UTIL_H was always undefined.

Would it be alright to push?
Thanks.
Comment 1 David King 2015-05-02 23:31:21 UTC
Review of attachment 302759 [details] [review]:

Looks good to me.
Comment 2 Antoine Jacoutot 2015-05-03 06:44:07 UTC
(In reply to David King from comment #1)
> Review of attachment 302759 [details] [review] [review]:
> 
> Looks good to me.

Thanks David.
It's in: 5dbcf9704e1b1529172c2894182389d11fde55a5