BSD: fix a couple of implicit declarations

vinagre/pty_open.c:337: warning: implicit declaration of function 'putenv'
vinagre/pty_open.c:354: warning: implicit declaration of function 'login_tty'

https://bugzilla.gnome.org/show_bug.cgi?id=748799